1999-10-18  J.T. Conklin  <jtc@redback.com>

        * m32r-stub.c, sparcl-stub.c, sparclet-stub.c (handle_exception):
        Return E01 instead of P01 when 'P' command fails.

2000-02-05  J.T. Conklin  <jtc@redback.com>

	* remote.c (putpkt_binary): Handle NAK from target stub.

2000-02-08  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	* configure.in: Remove the addition of sol-thread.c to the
	CONFIG_INITS list. This caused problems with init.c, because
	sol-thread.c would be grepped twice for _initialize_* functions.
	* configure: Ditto.
	* Makefile.in: Add FIXME for init.c.

2000-02-07  Jim Kingdon  <kingdon@redhat.com>

	Clean up compiler warnings:
	* bcache.h, bcache.c, c-valprint.c, coffread.c, stabsread.c,
	stack.c, valprint.c: Change variables to unsigned.
	* bcache.c: Rearrange to avoid warnings about variables not being set.
	* c-lang.c, ch-lang.c, f-lang.c, m2-lang.c: Include valprint.h
	rather than declaring print_max and repeat_count_threashold
	ourselves (incorrectly).
	* valprint.h: Do declare repeat_count_threashold.
	* ch-exp.c: Use default case for internal error.
	* findvar.c: Don't omit argument type.
	* symtab.c: Remove unused variable.

2000-02-04  Nick Clifton  <nickc@cygnus.com>

	* config/arm/tm-arm.h (LOWEST_PC): Define.

2000-02-04  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	* infrun.c (resume): Make just one call to target_resume(), instead
 	of four: set up correct parameters in all the cases ahead of time,
 	and do call at the end.

2000-02-04  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	* config/powerpc/tm-ppc-eabi.h: Define
 	SOFUN_ADDRESS_MAYBE_MISSING.

2000-02-04  Fernando Nasser  <fnasser@totem.to.cygnus.com>

	* arm-tdep.c (arm_pc_is_thumb_dummy): Account for large dummy
	frames (revisited).

Fri Feb  4 22:42:36 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* Makefile.in (INIT_FILES): Append CONFIG_INITS
	* configure.in (CONFIG_INIT): Initialize.
	(links): Link srcdir/gdbtk/library to gdbtcl2.